idf_component_register(SRCS "main.c"
                            "network.c"
                            "uart_frame.c"
                            "led.c"
                            "protocol.c"
                            "cam_cmd.c"
                            "timer_cam_config.c"
                            "bmm8563.c"
                    INCLUDE_DIRS ".")